@@ -1,1 +1,1 @@
-DIST gnome-user-share-3.14.2.tar.xz 391916 SHA256 6b05b3ef31af3bb39c903f94a0d163c0a9c4aa5266ae98e2281e0613f2972ee9 SHA512 d42587c0c64fda9d051f3d6c792358d02c32b95193df512016a04a0ee4861483f3060f1579de6fa229676795e420cf88732da334757471b79410d3be6ebe8bd1 WHIRLPOOL 14a191b8cbfa218e4dcde379212a00f0753d02726b55b16b9f67fbc2c5484038d9d18ababb5c2019624856041257a88cea6b00a3d4cf21a83c9369b9486452be
+DIST gnome-user-share-3.18.0.tar.xz 376944 SHA256 feb3bed59193eafea31f563ed7eab5f066aa5f86d4a89f067b162653d168d3fc SHA512 bc053b879c602f2d6d04431f817f528c7f6ffb20e2078fcef1b4cc8acbe95a658fb6cfe03b55fe87c46bd87ea175cfdfda8314928e9c3525ccf2fa8ab0fdf055 WHIRLPOOL 72c43048afae3888306c8033d63458df7fd806bf21c99405b72b5694e03e73fc5a43473671da978aea5ae223f9bf4111a809c0a9f17f47f7d38a55dd25f08817
