@@ -1,6 +1,6 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: $
+# $Id$
 
 EAPI="5"
 GCONF_DEBUG="no"
@@ -14,7 +14,7 @@ HOMEPAGE="https://git.gnome.org/browse/gnome-user-share"
 LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="~amd64 ~x86"
-IUSE="bluetooth"
+IUSE=""
 
 # FIXME: could libnotify be made optional ?
 # FIXME: selinux automagic support
@@ -24,11 +24,8 @@ RDEPEND="
 	>=gnome-base/nautilus-2.91.7
 	media-libs/libcanberra[gtk3]
 	>=www-apache/mod_dnssd-0.6
-	>=www-servers/apache-2.2[apache2_modules_dav,apache2_modules_dav_fs,apache2_modules_authn_file,apache2_modules_auth_digest,apache2_modules_authz_groupfile]
+	>=www-servers/apache-2.2[apache2_modules_dav,apache2_modules_dav_fs,apache2_modules_authn_file,apache2_modules_auth_digest,apache2_modules_authz_groupfile,apache2_mpms_prefork]
 	>=x11-libs/libnotify-0.7:=
-	bluetooth? (
-		>=net-wireless/gnome-bluetooth-3.9.3:2=
-		>=net-wireless/bluez-5[obex] )
 "
 DEPEND="${RDEPEND}
 	!<gnome-base/gnome-control-center-3.9
@@ -46,8 +43,6 @@ src_prepare() {
 
 src_configure() {
 	gnome2_src_configure \
-		$(use_enable bluetooth) \
-		ITSTOOL=$(type -P true) \
 		--with-httpd=apache2 \
 		--with-modules-path=/usr/$(get_libdir)/apache2/modules/
 }
