@@ -2,6 +2,12 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome-user-share/ChangeLog,v 1.37 2014/05/27 06:51:19 pacho Exp $
 
+*gnome-user-share-3.18.0 (14 Oct 2015)
+
+  14 Oct 2015; Poncho <poncho@spahan.ch> +gnome-user-share-3.18.0.ebuild,
+  -gnome-user-share-3.14.2.ebuild:
+  gnome-extra/gnome-user-share: version bump
+
 *gnome-user-share-3.14.2 (09 Feb 2015)
 
   09 Feb 2015; Poncho <poncho@spahan.ch> +gnome-user-share-3.14.2.ebuild,
